--- a/RASD/references.bib
+++ b/RASD/references.bib
@@ -26,3 +26,11 @@
   year={1997},
   publisher={ACM}
 }
+@article{ieee1998ieee,
+  title={IEEE Std 830-1998, IEEE Recommended Practice for Software Requirements Specifications},
+  author={IEEE Software Engineering Standards Committee and others},
+  journal={October},
+  volume={20},
+  pages={1--5},
+  year={1998}
+}
