--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -187,19 +187,19 @@
     \comment{See enhancement \#3 on Git Hub}
     
     \subsubsection{State Charts}
-    \begin{figure}
+    \begin{figure}[!ht]
         \centering
         \includegraphics[width=\textwidth, keepaspectratio]{images/UML/state_individualRequest.png}
         \caption{Individual Request}
         \label{fig:state_individual}
     \end{figure}
-    \begin{figure}
+    \begin{figure}[!ht]
         \centering
         \includegraphics[width=\textwidth, keepaspectratio]{images/UML/state_groupRequest.png}
         \caption{Group Request}
         \label{fig:state_group}
     \end{figure}
-    \begin{figure}
+    \begin{figure}[!ht]
         \centering
         \includegraphics[width=\textwidth, keepaspectratio]{images/UML/state_run.png}
         \caption{Run}
